k8s/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
        - name: login-service
          image: yourdockerhub/login-service:latest
          ports:
            - containerPort: 9090
