k8s/login-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-service
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
